#ifndef BOARDGAMES_PLATEAUCOMBINATOIREABSTRAIT_H
#define BOARDGAMES_PLATEAUCOMBINATOIREABSTRAIT_H

#include "Plateau.h"

class PlateauCombinatoireAbstrait: public Plateau {
public:
    PlateauCombinatoireAbstrait(int dimension);
};


#endif //BOARDGAMES_PLATEAUCOMBINATOIREABSTRAIT_H
